<resources>
    <string name="app_name">Playlist Maker</string>
    <string name="search">Поиск</string>
    <string name="media">Медиатека</string>
    <string name="media_playlist">Плейлисты</string>
    <string name="media_favorite">Избранные треки</string>
    <string name="media_add_playlist">Новый плейлист</string>
    <string name="playlist">Плейлист</string>
    <string name="settings">Настройки</string>
    <string name="theme">Темная тема</string>
    <string name="share">Поделиться приложением</string>
    <string name="support">Написать в поддержку</string>
    <string name="agreement">Пользовательское соглашение</string>
    <string name="share_link">https://practicum.yandex.ru/android-developer/?from=catalog</string>
    <string name="mail">yourEmail@ya.ru</string>
    <string name="mail_subject">Сообщение разработчикам и разработчицам приложения Playlist Maker</string>
    <string name="mail_text">Спасибо разработчикам и разработчицам за крутое приложение!</string>
    <string name="agreement_link">https://yandex.ru/legal/practicum_offer</string>
    <string name="track_preview">Превью альбома</string>
    <string name="icon">Иконка</string>
    <string name="empty">Ничего не нашлось</string>
    <string name="empty_media_favorite">Ваша медиатека пуста</string>
    <string name="empty_media_playlist">Вы не создали  ни одного плейлиста</string>
    <string name="error">Проблемы со связью \n\n Загрузка не удалась. Проверьте подключение к интернету</string>
    <string name="update">Обновить</string>
    <string name="search_history">Вы искали</string>
    <string name="clean_history">Очистить историю</string>
    <string name="track_duration">Длительность</string>
    <string name="track_album">Альбом</string>
    <string name="track_year">Год</string>
    <string name="track_genre">Жанр</string>
    <string name="track_country">Страна</string>
    <string name="new_playlist">Новый плейлист</string>
    <string name="create_playlist_name">Название*</string>
    <string name="create_playlist_description">Описание</string>
    <string name="create_playlist">Создать</string>
    <string name="add_in_playlist">Добавить в плейлист</string>
    <string name="playlist_created">Плейлист %s создан</string>
    <string name="playlist_updated">Плейлист %s изменен</string>
    <string name="track_add_in_playlist">Добавлено в плейлист %s</string>
    <string name="track_exists_in_playlist">Трек уже добавлен в плейлист %s</string>
    <string name="modal_end_playlist_creating_title">Завершить создание плейлиста?</string>
    <string name="modal_end_playlist_creating_text">Все несохраненные данные будут потеряны</string>
    <string name="cancel">Отмена</string>
    <string name="end">Завершить</string>
    <string name="modal_delete_track_title">Удалить трек</string>
    <string name="modal_want_delete_track_text">Вы уверены, что хотите удалить трек из плейлиста?</string>
    <string name="delete">Удалить</string>
    <string name="ok">Ок</string>
    <string name="yes">Да</string>
    <string name="no">Нет</string>
    <string name="playlist_empty">В этом плейлисте нет списка треков, которым можно поделиться</string>
    <string name="playlist_share">Поделиться</string>
    <string name="playlist_delete">Удалить плейлист</string>
    <string name="want_delete_playlist">Хотите удалить плейлист?</string>
    <string name="playlist_update">Редактировать информацию</string>
    <string name="playlist_update_title">Редактировать</string>
    <string name="save">Сохранить</string>
    <string name="playlist_empty_tracks">В этом плейлисте нет треков</string>

    <plurals name="tracks_count">
        <item quantity="one">%d трек</item>
        <item quantity="few">%d трека</item>
        <item quantity="many">%d треков</item>
        <item quantity="other">%d треков</item>
    </plurals>

    <plurals name="minutes">
        <item quantity="one">%d минута</item>
        <item quantity="few">%d минуты</item>
        <item quantity="many">%d минут</item>
        <item quantity="other">%d+ минут</item>
    </plurals>
</resources>