<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/colorSecondary"
    android:fitsSystemWindows="true"
    android:orientation="vertical"
    tools:context=".settings.ui.fragments.SettingsFragment">

    <TextView
        style="@style/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="40dp"
        android:paddingHorizontal="@dimen/indent_m"
        android:paddingTop="14dp"
        android:text="@string/settings" />

    <Switch
        android:id="@+id/themeSwitch"
        style="@style/switcher"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:lineHeight="@dimen/line_height_m"
        android:paddingVertical="@dimen/indent_l"
        android:paddingStart="@dimen/indent_m"
        android:paddingEnd="@dimen/indent_s"
        android:text="@string/theme"
        android:textColor="?attr/colorSecondaryVariant"
        android:textSize="@dimen/text_size_m"
        tools:ignore="UseSwitchCompatOrMaterialXml" />

    <Button
        android:id="@+id/btnShare"
        style="@style/btnOption"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/share"
        app:icon="@drawable/share" />

    <Button
        android:id="@+id/btnSupport"
        style="@style/btnOption"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/support"
        app:icon="@drawable/support" />

    <Button
        android:id="@+id/btnAgreement"
        style="@style/btnOption"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/agreement"
        app:icon="@drawable/chevron_right" />
</LinearLayout>