<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/empty_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".media.ui.fragments.MediaPlaylistFragment">

    <Button
        android:id="@+id/btnCleanHistory"
        style="@style/btnXM"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="24dp"
        android:text="@string/media_add_playlist" />

    <ImageView
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="46dp"
        android:layout_marginBottom="@dimen/indent_m"
        android:contentDescription="@string/media"
        android:scaleType="centerCrop"
        android:src="@drawable/empty" />

    <TextView
        style="@style/textB"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/empty_media_playlist"
        android:textAlignment="center" />
</LinearLayout>