<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SettingsActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:orientation="vertical">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="28dp"
            android:paddingHorizontal="4dp"
            android:paddingTop="4dp">

            <ImageButton
                android:id="@+id/back"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:backgroundTint="@color/white"
                android:src="@drawable/arrow_left" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="60dp"
                android:lineHeight="26sp"
                android:text="@string/settings"
                android:textColor="@color/black"
                android:textSize="22sp"
                android:textStyle="bold" />
        </FrameLayout>

        <Switch
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:lineHeight="18sp"
            android:paddingVertical="18dp"
            android:paddingStart="16dp"
            android:paddingEnd="12dp"
            android:text="@string/theme"
            android:textColor="@color/black"
            android:textSize="16sp"
            tools:ignore="UseSwitchCompatOrMaterialXml" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/white"
            android:lineHeight="18sp"
            android:paddingVertical="18dp"
            android:paddingStart="16dp"
            android:paddingEnd="12dp"
            android:stateListAnimator="@null"
            android:text="@string/share"
            android:textAlignment="textStart"
            android:textAllCaps="false"
            android:textColor="@color/black"
            android:textSize="16sp"
            app:cornerRadius="0dp"
            app:icon="@drawable/share"
            app:iconGravity="end"
            app:iconPadding="8dp"
            app:iconTint="@color/gray" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/white"
            android:lineHeight="18sp"
            android:paddingVertical="18dp"
            android:paddingStart="16dp"
            android:paddingEnd="12dp"
            android:stateListAnimator="@null"
            android:text="@string/support"
            android:textAlignment="textStart"
            android:textAllCaps="false"
            android:textColor="@color/black"
            android:textSize="16sp"
            app:cornerRadius="0dp"
            app:icon="@drawable/support"
            app:iconGravity="end"
            app:iconPadding="8dp"
            app:iconTint="@color/gray" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/white"
            android:lineHeight="18sp"
            android:paddingVertical="18dp"
            android:paddingStart="16dp"
            android:paddingEnd="12dp"
            android:stateListAnimator="@null"
            android:text="@string/agreement"
            android:textAlignment="textStart"
            android:textAllCaps="false"
            android:textColor="@color/black"
            android:textSize="16sp"
            app:cornerRadius="0dp"
            app:icon="@drawable/chevron_right"
            app:iconGravity="end"
            app:iconPadding="8dp"
            app:iconTint="@color/gray" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>