<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/colorSecondary"
    android:fitsSystemWindows="true"
    android:orientation="vertical"
    tools:context=".player.ui.fragments.PlayerFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="28dp">

            <ImageButton
                android:id="@+id/btnBack"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_marginStart="4dp"
                android:layout_marginTop="4dp"
                android:backgroundTint="?attr/colorSecondary"
                android:src="@drawable/arrow_left"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/trackImage"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginHorizontal="@dimen/indent_xxl"
                android:layout_marginTop="30dp"
                android:background="@drawable/rounded_corners_x"
                android:clipToOutline="true"
                android:contentDescription="@string/track_preview"
                android:scaleType="centerCrop"
                app:layout_constrainedWidth="true"
                app:layout_constraintDimensionRatio="1:1"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/btnBack" />

            <TextView
                android:id="@+id/trackName"
                style="@style/trackNameDetail"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/indent_xxl"
                android:layout_marginTop="@dimen/indent_xxl"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/trackImage"
                tools:text="@tools:sample/lorem" />

            <TextView
                android:id="@+id/trackAuthor"
                style="@style/trackAuthorDetail"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/indent_xxl"
                android:layout_marginTop="@dimen/indent_s"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/trackName"
                tools:text="@tools:sample/lorem" />

            <ImageButton
                android:id="@+id/createPlaylist"
                style="@style/playerSecondaryBtn"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginStart="@dimen/indent_xxl"
                android:layout_marginEnd="64dp"
                android:src="@drawable/playlist"
                app:layout_constraintBottom_toTopOf="@id/btnPlay"
                app:layout_constraintEnd_toEndOf="@id/btnPlay"
                app:layout_constraintHorizontal_bias="0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/btnPlay" />

            <ImageButton
                android:id="@+id/btnPlay"
                android:layout_width="82dp"
                android:layout_height="82dp"
                android:layout_marginTop="12dp"
                android:background="@drawable/rounded"
                android:backgroundTint="?attr/colorSecondary"
                android:src="@drawable/play"
                app:layout_constraintEnd_toEndOf="@id/favor"
                app:layout_constraintStart_toStartOf="@id/createPlaylist"
                app:layout_constraintTop_toBottomOf="@id/trackAuthor" />

            <ImageButton
                android:id="@+id/favor"
                style="@style/playerSecondaryBtn"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginStart="64dp"
                android:layout_marginEnd="@dimen/indent_xxl"
                android:src="@drawable/favourite_off"
                app:layout_constraintBottom_toTopOf="@id/btnPlay"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="1"
                app:layout_constraintStart_toStartOf="@id/btnPlay"
                app:layout_constraintTop_toBottomOf="@id/btnPlay" />


            <TextView
                android:id="@+id/trackTime"
                style="@style/trackAuthorDetail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/indent_s"
                android:text="00:00"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/btnPlay" />

            <androidx.constraintlayout.widget.Group
                android:id="@+id/group"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:visibility="visible"
                app:constraint_referenced_ids="trackAlbumTitle, trackAlbum" />

            <TextView
                android:id="@+id/trackDurationTitle"
                style="@style/trackDetail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/indent_m"
                android:layout_marginTop="38dp"
                android:text="@string/track_duration"
                android:textColor="@color/gray"
                app:layout_constraintHorizontal_bias="0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/trackTime" />

            <TextView
                android:id="@+id/trackDuration"
                style="@style/trackDetail"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/icon_indent"
                android:layout_marginTop="38dp"
                android:layout_marginEnd="@dimen/indent_m"
                android:textColor="?attr/colorSecondaryVariant"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/trackDurationTitle"
                app:layout_constraintTop_toBottomOf="@id/trackTime"
                tools:text="@tools:sample/lorem" />

            <TextView
                android:id="@+id/trackAlbumTitle"
                style="@style/trackDetail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/indent_m"
                android:layout_marginTop="@dimen/indent_m"
                android:text="@string/track_album"
                android:textColor="@color/gray"
                app:layout_constraintHorizontal_bias="0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/trackDurationTitle" />

            <TextView
                android:id="@+id/trackAlbum"
                style="@style/trackDetail"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/icon_indent"
                android:layout_marginTop="@dimen/indent_m"
                android:layout_marginEnd="@dimen/indent_m"
                android:textColor="?attr/colorSecondaryVariant"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/trackAlbumTitle"
                app:layout_constraintTop_toBottomOf="@id/trackDurationTitle"
                tools:text="@tools:sample/lorem" />

            <TextView
                android:id="@+id/trackYearTitle"
                style="@style/trackDetail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/indent_m"
                android:layout_marginTop="@dimen/indent_m"
                android:text="@string/track_year"
                android:textColor="@color/gray"
                app:layout_constraintHorizontal_bias="0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/trackAlbumTitle" />

            <TextView
                android:id="@+id/trackYear"
                style="@style/trackDetail"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/icon_indent"
                android:layout_marginTop="@dimen/indent_m"
                android:layout_marginEnd="@dimen/indent_m"
                android:textColor="?attr/colorSecondaryVariant"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/trackYearTitle"
                app:layout_constraintTop_toBottomOf="@id/trackAlbumTitle"
                tools:text="@tools:sample/lorem" />

            <TextView
                android:id="@+id/trackGenreTitle"
                style="@style/trackDetail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/indent_m"
                android:layout_marginTop="@dimen/indent_m"
                android:text="@string/track_genre"
                android:textColor="@color/gray"
                app:layout_constraintHorizontal_bias="0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/trackYearTitle" />

            <TextView
                android:id="@+id/trackGenre"
                style="@style/trackDetail"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/icon_indent"
                android:layout_marginTop="@dimen/indent_m"
                android:layout_marginEnd="@dimen/indent_m"
                android:textColor="?attr/colorSecondaryVariant"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/trackGenreTitle"
                app:layout_constraintTop_toBottomOf="@id/trackYearTitle"
                tools:text="@tools:sample/lorem" />

            <TextView
                android:id="@+id/trackCountryTitle"
                style="@style/trackDetail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/indent_m"
                android:layout_marginTop="@dimen/indent_m"
                android:text="@string/track_country"
                android:textColor="@color/gray"
                app:layout_constraintHorizontal_bias="0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/trackGenreTitle" />

            <TextView
                android:id="@+id/trackCountry"
                style="@style/trackDetail"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/icon_indent"
                android:layout_marginTop="@dimen/indent_m"
                android:layout_marginEnd="@dimen/indent_m"
                android:textColor="?attr/colorSecondaryVariant"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/trackCountryTitle"
                app:layout_constraintTop_toBottomOf="@id/trackGenreTitle"
                tools:text="@tools:sample/lorem" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

    <View
        android:id="@+id/shadow"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:alpha="0.5"
        android:background="@color/black"
        android:visibility="gone" />

    <LinearLayout
        android:id="@+id/playlistBottomSheet"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:backgroundTint="?attr/colorSecondary"
        android:orientation="vertical"
        android:paddingVertical="8dp"
        app:behavior_hideable="true"
        app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior">

        <View
            android:layout_width="50dp"
            android:layout_height="4dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="30dp"
            android:background="@drawable/rounded_corners_x"
            android:backgroundTint="?attr/colorOnSecondary" />

        <TextView
            style="@style/textB"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="@string/add_in_playlist" />

        <Button
            android:id="@+id/btnCreatePlaylist"
            style="@style/btnXM"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="24dp"
            android:layout_marginBottom="24dp"
            android:text="@string/media_add_playlist" />

        <ProgressBar
            android:id="@+id/progressBar"
            android:layout_width="44dp"
            android:layout_height="44dp"
            android:layout_gravity="center_horizontal"
            android:indeterminateTint="@color/blue"
            android:visibility="gone" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="gone"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />
    </LinearLayout>
</androidx.coordinatorlayout.widget.CoordinatorLayout>